
** (Pktgen) Sounds like 'Packet-Gen'**

**=== Modifications ===**
 - 19.09.0 - Fix linking of Lua library when no pkg-config file is found and
           linking liblua.a
	   Fixed and issue with packet rate not being changed when the packet
	   size is changed
	   Change version numering to year.month.patch format
           updated code to adjust the packet tx interval based on command
	   changes on the packet size and other areas.
 - 3.7.1 - Add TTL support to single and range modes. Better docs for dump packets
         - Pktgen 3.7.1 will build with DPDK 18.02 to 19.08-rc2, but 18.08 has
	   a problem with vhost.h VRING_EVENT_F_AVAIL not defined and appears
	   the Ubuntu 19.04 version I am running does not define it correctly.
         - fixed the RX side using TX count for rx_burst command.
	 - General cleanup
 - 3.7.0 - Fixed build issues with DPDK 19.08 as DPDK renamed a lot of defines
           Fixed up the meson files to build pktgen with meson and ninja
           Minor cleanup
 - 3.6.6 - Add portInfo() function in lua to return most of the port info in
           one structure.
 - 3.6.5 - Fix ldflags order for RHEL, CentOS and other systems to include lua in build
 - 3.6.4 - Add a new page stats screen to dump out info
           Updated the readme to give better info on .cfg files
	   Fixed the port <N> to include only valid ports
	   fix port command functions to use uint16_t for ports.
	   fix detection of Lua libs testing LUA_PKT_LIBS for Ubuntu 18.10
 - 3.6.3 - Fix race condition in start command
           Add support of having a different PCAP file per queue of a port
	   Replace constant with macro for PCAP buffer size
	   Expose number missed frames to Lua stats.
	   Fix cleanup of unsent pkts, this fixes duplicate packets being sent.
 - 3.6.2 - Fix GRE header pointer being NULL and fixed IPPROTO_UDP to use PG_IPPROTO_UDP
 - 3.6.1 - Fix string truncation warnings for latest GCC
 - 3.6.0 - Fixed config files.