@@ -59,7 +59,8 @@ prints("seqTable", pktgen.decompile(0, "all"));
 pktgen.ports_per_page(2);
 pktgen.icmp_echo("all", "on");
 pktgen.send_arp("all", "g");
-pktgen.set_mac("0-2", "0000:1122:3344");
+pktgen.set_mac("0-2","src", "0001:1122:3344");
+pktgen.set_mac("0-2", "dst","0002:1122:3344");
 pktgen.mac_from_arp("on");
 pktgen.set_ipaddr("0", "dst", "10.10.2.2");
 pktgen.set_ipaddr("0", "src", "10.10.1.2/24");
