@@ -11,6 +11,10 @@ Pktgen-DPDK - Traffic Generator powered by DPDK
 	   Fixed and issue with packet rate not being changed when the packet
 	   size is changed
 	   Change version numering to year.month.patch format
+	   Change lua pktgen.set_mac() to have three args set_mac(<portlist>,
+	   'src|dst', mac_addr) instead of two args
+	   add support for setting via lua src and dst mac addresses
+	   fix up the RSS port configuration options
            updated code to adjust the packet tx interval based on command
 	   changes on the packet size and other areas.
  - 3.7.1 - Add TTL support to single and range modes. Better docs for dump packets
